# store-sales

./: .gitignore  README.md  pyproject.toml
conf/base/: catalog.yml  parameters_data_preprocessing.yml  parameters_feature_engineering.yml  parameters_model_training.yml
notebooks/: 1.0-analyze-data.ipynb  2.0-time-series-analysis-old.ipynb  2.0-time-series-analysis.ipynb  3.1-models-baseline.ipynb  3.2-model-arima.ipynb  3.3-model-gbm.ipynb
src/store_sales/: __init__.py  __main__.py
src/store_sales/pipelines/data_preprocessing/: __init__.py  nodes.py  pipeline.py
src/store_sales/pipelines/feature_engineering/: nodes.py  pipeline.py
src/store_sales/pipelines/model_training/: mlflow.py  nodes.py  pipeline.py
tests/pipelines/data_preprocessing/: test_nodes.py  test_pipeline.py
