[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "store_sales"
readme = "README.md"
dynamic = [ "version",]
dependencies = [
    "ipython>=8.10",
    "jupyterlab>=3.0",
    "notebook",
    "kedro[jupyter]~=0.19.11",
    "kedro-datasets[pandas-csvdataset, pandas-exceldataset, pandas-parquetdataset, plotly-plotlydataset, plotly-jsondataset, matplotlib-matplotlibwriter]>=3.0",
    "kedro-viz>=6.7.0",
    "scikit-learn~=1.5.1",
    "seaborn~=0.12.1",
]

[project.scripts]
store-sales = "store_sales.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest-cov~=3.0",
    "pytest-mock>=1.7.1, <2.0",
    "pytest~=7.2",
    "ruff~=0.1.8",
]

[tool.kedro]
package_name = "store_sales"
project_name = "store-sales"
kedro_init_version = "0.19.11"
tools = "['Linting', 'Testing', 'Data Structure', 'Kedro Viz']"
example_pipeline = "False"
source_dir = "src"

[tool.ruff]
line-length = 88
show-fixes = true
lint.select = [
    "B",    # Bugbear
    "C4",   # Comprehensions
    "C90",  # mccabe
    "D",    # Docstrings
    "E",    # pycodestyle error
    "W",    # pycodestyle warning
    "F",    # flake8
    "S",    # bandit
    "N",    # pep8-naming
    "RUF",  # ruff
    "I",    # isort
    "PD",   # pandas
    "UP",   # pyupgrade
    "PL",   # pylint
    "T201", # print
]
lint.ignore = [
    "E501", # line too long
    "D100", # missing docstring
    "D104", # missing docstring in public package
    "D205", # blank line between summary and description
    "D400", # first line should end with a period, question mark or exclamation point
    "D404", # first word of the docstring should not be "This"
    "D415", # first line should end with a period, question mark or exclamation point
    "N806", # Variable should be lowercase
]

[project.entry-points."kedro.hooks"]

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov src/store_sales -ra"

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = [ "pragma: no cover", "raise NotImplementedError",]

[tool.ruff.format]
docstring-code-format = true

[tool.setuptools.dynamic.version]
attr = "store_sales.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
